# tetris-for-2

./: .gitignore  Cargo.toml  Makefile  README.md  Readme.md  build.sbt  scalastyle-config.xml
resources/assets/sprites/: pixel.ron
resources/config/: display.ron  input.ron
src/: events.rs  game_state.rs  input.rs  lib.rs  main.rs  sprite_loader.rs  utils.rs
src/main/scala/com.tetrisfortwo/: ServerApp.scala
src/main/scala/com.tetrisfortwo/utils/: package.scala
src/systems/: control_system.rs  debug_system.rs  game_system.rs  input_system.rs  mod.rs  network_system.rs  utils.rs
src/systems/control/: double_player_system.rs  mod.rs  multiplayer_system.rs  player.rs  single_player_system.rs
src/systems/network/: client_system.rs  mod.rs  server_system.rs
src/systems/tetris/: board.rs  mod.rs  piece.rs  tetris_system.rs
static/: index.html
