[package]
name = "tetris-for-two"
version = "0.0.1"
authors = ["Dylan", "Jeanna"]
edition = "2018"

[features]
default = ["metal"]

empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
release = ["amethyst/no-slow-safety-checks"]
profiler = ["amethyst/profiler"]

[dependencies]
log = "0.4"
#lazy_static = "1.4"

amethyst = "0.15"

# Network serialization
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "0.14"

# Async channels
crossbeam = "0.7"

# Command line parsing
clap = "2.33"